Classes: "author-first-n" , "author-last-n", "editors-first-n", "editors-last-n" created, to handle input values.

--- a/client/templates/admin/admin-publications-edit.html
+++ b/client/templates/admin/admin-publications-edit.html
@@ -16,10 +16,10 @@
          <div class="form-group">
           <label for="authors" class="col-sm-2 control-label">Author(s)</label>
           <div class="col-sm-5">
-              <input type="text" class="form-control" name="authors" id="{{uniqidFirst}}" value="{{valueFirst}}"  placeholder="Enter First Name">
+                <input type="text" class="form-control author-first-n" name="authors" id="{{uniqidFirst}}" value="{{valueFirst}}"  placeholder="Enter First Name">
           </div>
            <div class="col-sm-5">
-              <input type="text" class="form-control" name="authors" id="{{uniqidLast}}" value="{{valueLast}}" placeholder="Enter Last Name">
+              <input type="text" class="form-control author-last-n" name="authors" id="{{uniqidLast}}" value="{{valueLast}}" placeholder="Enter Last Name">
           </div>
         </div>
         {{/each}}
@@ -110,10 +110,10 @@
         <div class="form-group">
           <label for="editors" class="col-sm-2 control-label">Editor(s)</label>
           <div class="col-sm-5">
-              <input type="text" class="form-control" name="editors" id="firstEdName"  placeholder="Enter Book Editor(s)">
+              <input type="text" class="form-control editors-first-n" name="editors" id="firstEdName"  placeholder="Enter Book Editor(s)">
           </div>
           <div class="col-sm-5">
-              <input type="text" class="form-control" name="editors" id="lastEdName"  placeholder="Enter Book Editor(s)">
+              <input type="text" class="form-control editors-last-n" name="editors" id="lastEdName"  placeholder="Enter Book Editor(s)">
           </div>
         </div>
 
@@ -167,10 +167,10 @@
    <div class="form-group">
         <label for="authors" class="col-sm-2 control-label">Author(s)</label>
         <div class="col-sm-5">
-            <input type="text" class="form-control" name="firstName" value="{{valueFirst}}" id="{{uniqidFirst}}"  placeholder="Enter First Name">
+            <input type="text" class="form-control author-first-n" name="firstName" value="{{valueFirst}}" id="{{uniqidFirst}}"  placeholder="Enter First Name">
         </div>
         <div class="col-sm-5">
-            <input type="text" class="form-control" name="lastName" value="{{valueLast}}" id="{{uniqidLast}}"  placeholder="Enter Last Name">
+            <input type="text" class="form-control author-last-n" name="lastName" value="{{valueLast}}" id="{{uniqidLast}}"  placeholder="Enter Last Name">
         </div>
     </div>
 </template>
@@ -179,10 +179,10 @@
    <div class="form-group">
         <label for="authors" class="col-sm-2 control-label">Editor(s)</label>
         <div class="col-sm-5">
-            <input type="text" class="form-control" name="authors" value="{{valueFirst}}" id="{{uniqidFirst}}"  placeholder="Enter First Name">
+            <input type="text" class="form-control editors-first-n" name="authors" value="{{valueFirst}}" id="{{uniqidFirst}}"  placeholder="Enter First Name">
         </div>
         <div class="col-sm-5">
-            <input type="text" class="form-control" name="authors" value="{{valueLast}}" id="{{uniqidLast}}"  placeholder="Enter Last Name">
+            <input type="text" class="form-control editors-last-n" name="authors" value="{{valueLast}}" id="{{uniqidLast}}"  placeholder="Enter Last Name">
         </div>
     </div>
 </template>
