changed remaining subscribers to Subscribers

--- a/client/templates/admin/admin-members.html
+++ b/client/templates/admin/admin-members.html
@@ -8,7 +8,7 @@
         {{#each members}}
         <ul class="list-group">
           <li class="list-group-item">
-          <a title="Edit" id="js-edit-ne" href="{{pathFor route='adminNewsEventsEdit'}}">{{profile.lastName}}, {{profile.firstName}}</a>
+          <a title="Edit" id="js-edit-ne" href="{{pathFor route='profileSettings'}}">{{profile.lastName}}, {{profile.firstName}}</a>
           <!-- delete button -->
           <a title="Edit" class="jsMembersDelUser btn btn-danger admin-button" href="#"><i class="fa fa-trash"></i> </a>
           </li>
