--- a/client/templates/header_footer/loginModal.html
+++ b/client/templates/header_footer/loginModal.html
@@ -21,7 +21,7 @@
                             </form>
 
                             <div class="text-left">
-                                  <a class="forgot" href="/account/begin_password_reset">Forgot password?</a>
+                                  <a class="forgot" href="/password-forgot">Forgot password?</a>
                             </div>
 
                             <div class="divisionSocial">
