--- a/client/templates/account-templates/resetpw.html
+++ b/client/templates/account-templates/resetpw.html
@@ -8,9 +8,9 @@
       </ol><!-- End of Breadcrumb -->
 
       <div class="header-content-inner">
-        <h1>DO YOU FORGOT YOUR PASSWORD?</h1>
+        <h1>DID YOU FORGET YOUR PASSWORD?</h1>
         <hr>
-        <h2>Get a new one by email</h2>
+        <h2>Get a new password via email</h2>
       </div>
     </div>
   </header> <!-- ./Stage -->
@@ -29,7 +29,7 @@
         </div>
        <center><button id="sendPassword" type="submit" class="btn btn-primary btn-newsletter">GET PASSWORD RESET INSTRUCTIONS</button></center>
       </form>
-    </div> 
+    </div>
   </div> <!-- ./Form -->
-  
-</template>  
+
+</template>
