--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -62,7 +62,7 @@
 						<div class="row">
 								<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
 										<div class="form-group">
-												<a href="#">Forgot your Password?</a>
+												<a href="/password-forgot">Forgot your Password?</a>
 										</div>
 								</div>
 						</div>
