--- a/client/templates/guests/home.html
+++ b/client/templates/guests/home.html
@@ -10,14 +10,14 @@
                     <div class="social top center networks-5 ">
 												{{#unless currentUser}}
                         <button type="button" class="btn btn-primary btn-xl page-scroll js-join btn-joinus">JOIN US</button> <!-- Social Media Bar -->
-												{{/unless}}	
+												{{/unless}}
 												<span>FOLLOW US:</span>
                         <!-- Facebook Share Button -->
                         <a class="follow-facebook" href="https://www.facebook.com/openstrategynetwork/"><i class="fa some-header fa-facebook-official"></i></a>
                         <!-- Twitter Share Button -->
                         <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet"><i class="fa some-header fa-twitter"></i></a>
                         <!-- RSS Share Button -->
-                        <a class="follow-rss" href="#"><i class="fa some-header fa-rss"></i></a>
+                        <a class="follow-rss" href="/rss/updates"><i class="fa some-header fa-rss"></i></a>
                     </div>
                 </div>
             </div>
