--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -85,7 +85,7 @@ related news are warmly welcome. In order to add news to this section, please se
         {{#if keywordsExist}}
           {{#each keywords}}<small class="tags">{{this}} </small>{{/each}}
         {{/if}}
-        <p class="text-muted"> {{shortIt this.description 150}} <a href="{{pathFor route = 'newsAndEventsPage'}}" class="textlink">read more </a></p>
+        <p class="text-muted"> {{shortIt this.cleanDescription 150}} <a href="{{pathFor route = 'newsAndEventsPage'}}" class="textlink">read more </a></p>
     </div>
   </div>
 </template>
