--- a/client/templates/guests/home.html
+++ b/client/templates/guests/home.html
@@ -46,7 +46,7 @@
                     {{#if keywordsExist}}
                     {{#each keywords}}<small class="tags">{{this}}</small>{{/each}}
                     {{/if}}
-                    <p class="text-muted"> {{shortIt this.description 150}} <a href="{{pathFor route='newsAndEventsPage'}}" class="textlink">read more </a></p>
+                    <p class="text-muted"> {{shortIt this.cleanDescription 150}} <a href="{{pathFor route='newsAndEventsPage'}}" class="textlink">read more </a></p>
                 </div>
                 </div>
                 {{/each}}
