adding verification mail

--- a/client/templates/guests/newsEventsPage.html
+++ b/client/templates/guests/newsEventsPage.html
@@ -32,7 +32,7 @@
 							<!-- ./ Info-->
 							<!-- Back-Button 2 -->
 							<div class="col-sm-2 col-sm-offset-1 col-xs-12">
-                                <div class="btn btn-primary btn-sm btn-back" alt="back">
+                                <div class="btn btn-primary btn-sm btn-back js-back" alt="back">
                                         <span class="glyphicon glyphicon-circle-arrow-left"></span>
                                 </div>
 							</div>
