adding google analytics

--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -311,7 +311,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
-                        <button type="submit" id="security" class="btn btn-primary extra-spacing-bottom">SAVE CHANGES</button>
+                        <button type="submit" class="btn btn-primary extra-spacing-bottom">SAVE CHANGES</button>
                     </div>
                 </div>
             </div>
