--- a/client/templates/admin/admin-publications-edit.html
+++ b/client/templates/admin/admin-publications-edit.html
@@ -3,7 +3,7 @@
 		<div class="putdown extra-spacing-bottom">
             <h1 class="extra-spacing-bottom">EDIT ENTRY</h1>
             <hr>
-      {{#with pubEntry}}
+
       <form class="form-horizontal" id="addPub" role="form">
         <div class="form-group">
             <label for="title" class="col-sm-2 control-label">Title</label>
@@ -138,11 +138,12 @@
         </div>
 
         {{#if attachmentExists}}
-         <div class="form-group">
-          <li>
-            <a href="{{ attachment.url }}">{{attachment.original.name}}  </a>
+		<div class="form-group">
+          <label for="attachment" class="col-sm-2 control-label">Attachment</label>
+          <div class="col-sm-10">
+            <a href="{{attachmentURL}}{{attachmentId}}" target="_blank">{{attachment.original.name}}</a>
             <button type="button" class="btn btn-danger jsPubsDelAttachment"><i class="fa fa-trash"></i></button>
-        </li>
+          </div>
         </div>
         {{else}}
         <div class="form-group">
@@ -160,7 +161,7 @@
         </div>
       </form> <!-- end form -->
 
-      {{/with}}
+
     </div> <!-- putdown -->
   </div> <!-- container -->
 </template>
