--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -383,7 +383,7 @@ a.active {
 }
 
 .btn-primary.active:hover {
-        background-color: @brand-primary;
+        background-color: darken(@brand-primary, 20%);
         color: white;
 }
 
