Polish Searchfield Members & Bibliography

--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1303,13 +1303,24 @@ ul.list-inline.social-buttons {
 
 //Search
 
+.input-group {
+    width: 100%;
+}
+
+.input-group-addon{
+position: absolute;
+z-index: 3;
+right: 10px;
+top: 3px;
+}
+
 
 .stylish-input-group .input-group-addon{
-		background: white !important;
-		border-color: @gray-light;
+		background: transparent !important;
+        border-color: transparent;
 }
+
 .stylish-input-group .form-control{
-		border-right:0;
 		box-shadow:0 0 0;
 }
 
