--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -2165,7 +2165,7 @@ hover-wasabi-content{
 	display:block;
 	position:absolute;
 	width:auto;
-	min-width:100%;
+	// min-width:100%;
 	height:100%;
 	min-height:auto;
 	top: 50%;
