new rss-feedburner links

--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -29,31 +29,16 @@
                             <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet"><i class="fa some fa-twitter"></i></a>
 
                             <!-- RSS Share Button -->
-                            <a class="follow-rss" href="#"><i class="fa some fa-rss"></i></a>
+                            <a class="follow-rss" href="http://feeds.feedburner.com/OpenStrategyNetworksFeed"><i class="fa some fa-rss"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
 
-
-
-            <!-- <div class="row text-center">
-                <div class="col-sm-4">
-                    <a class="footer-link" href="url">University of Zurich</a>
-                </div>
-                <div class="col-sm-4">
-                    <a class="footer-link" href="url">University of Oxford</a>
-                </div>
-                <div class="col-sm-4">
-                    <a class="footer-link" href="url">University of Innsbruck</a>
-                </div>
-            </div> -->
             <div class="row text-center">
                 <div class="col-md-6 col-md-offset-6 text-right col-sm-12">
                     <ul class="list-inline quicklinks copyright">
                         <li><span class="copyright">&copy; Open Strategy Network 2016 <span class="separator">·</span> Made with <i class="fa fa-heart"></i> by <a class="footer-link" href="#">webgstlt</a></span> </li>
-                        <!-- <li><a class="footer-link" href="imprint.html">Imprint</a></li> -->
-<!--                     <li><a href="#">Terms of Use</a></li> -->
                     </ul>
                 </div>
             </div>
