--- a/client/templates/guests/home.html
+++ b/client/templates/guests/home.html
@@ -17,7 +17,7 @@
                         <!-- Twitter Share Button -->
                         <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet"><i class="fa some-header fa-twitter"></i></a>
                         <!-- RSS Share Button -->
-                        <a class="follow-rss" href="/rss/updates"><i class="fa some-header fa-rss"></i></a>
+                        <a class="follow-rss" href="http://feeds.feedburner.com/OpenStrategyNetworksFeed"><i class="fa some-header fa-rss"></i></a>
                     </div>
                 </div>
             </div>
