Latency compensation 10ms.

--- a/client/templates/account-templates/joinus.html
+++ b/client/templates/account-templates/joinus.html
@@ -53,8 +53,8 @@
 
   <!--     Registration Form -->
   <section class="bg-light-gray extra-spacing-top" id="js-scrollStop">
-    <div class="container">
-        <form>
+    <div id="preLoad" class="container">
+        <form id="joinus">
             {{> atForm state='signUp'}}
         </form>
     </div>
