Root url added to logo paths

--- a/client/templates/header_footer/_header.html
+++ b/client/templates/header_footer/_header.html
@@ -11,7 +11,7 @@
 										<span class="icon-bar"></span>
 										<span class="icon-bar"></span>
 								</button>
-								<a class="navbar-brand" href="{{pathFor 'home'}}"><img src="img/osn_logoneu.png" class="img-responsive" alt="Open Strategy Network"></a>
+								<a class="navbar-brand" href="{{pathFor 'home'}}"><img src="{{rootUrl}}img/osn_logoneu.png" class="img-responsive" alt="Open Strategy Network"></a>
 						</div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
