--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -16,9 +16,12 @@ body {
 // }
 
 .sticky-wrapper {
+    min-height: 100%;
     height: auto !important;
+    height: 100%;
     margin: 0 auto -209px;
 }
+
 .sticky-footer, .push {
     height: 209px;
     clear: both;
