Added _target blank to social icons and external links

--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -20,16 +20,16 @@
                     <div class="share-button sharer" style="display: block;">
                         <div class="social top center networks-5 ">
                             <!-- Facebook Share Button -->
-                            <a class="follow-facebook" href="https://www.facebook.com/openstrategynetwork/"><i class="fa some fa-facebook-official"></i></a>
+                            <a class="follow-facebook" href="https://www.facebook.com/openstrategynetwork/" target="_blank" alt="OSN on Facebook"><i class="fa some fa-facebook-official"></i></a>
 
                             <!-- Google Plus Share Button -->
                             <!-- <a class="fbtn share gplus" href="https://plus.google.com/share?url=url"><i class="fa fa-google-plus"></i></a> -->
 
                             <!-- Twitter Share Button -->
-                            <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet"><i class="fa some fa-twitter"></i></a>
+                            <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet" target="_blank" alt="OSN on Twitter"><i class="fa some fa-twitter"></i></a>
 
                             <!-- RSS Share Button -->
-                            <a class="follow-rss" href="http://feeds.feedburner.com/OpenStrategyNetworksFeed"><i class="fa some fa-rss"></i></a>
+                            <a class="follow-rss" href="http://feeds.feedburner.com/OpenStrategyNetworksFeed" target="_blank" alt="OSN RSS Feed"><i class="fa some fa-rss"></i></a>
                         </div>
                     </div>
                 </div>
