--- a/client/templates/members/profileSettings.html
+++ b/client/templates/members/profileSettings.html
@@ -284,7 +284,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
-                        <label for="text">Twitter <a class="button-download btn btn-primary btn-sm btn-external-link" href="http://www.twitter.com"><i class="fa fa-external-link"></i> </a></label>
+                        <label for="text">Twitter <a class="button-download btn btn-primary btn-sm btn-external-link" href="http://www.twitter.com" target="_blank" alt="Go to Twitter"><i class="fa fa-external-link"></i> </a></label>
                         <input type="text"  id="twitter" class="form-control" value="{{profile.twitter}}" placeholder="https://twitter.com/YOURTWITTERHANDLER">
                     </div>
                 </div>
@@ -293,7 +293,7 @@
               <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
-                      <label for="text">LinkedIn <a class="button-download btn btn-primary btn-sm btn-external-link" href="http://www.linkedin.com"><i class="fa fa-external-link"></i> </a></label>
+                      <label for="text">LinkedIn <a class="button-download btn btn-primary btn-sm btn-external-link" href="http://www.linkedin.com" target="_blank" alt="Got to LinkedIn"><i class="fa fa-external-link"></i> </a></label>
                       <input type="text" id="linkedin" class="form-control"  value="{{profile.linkedin}}" placeholder="Address to your LinkedIn account">
                     </div>
                 </div>
@@ -302,7 +302,7 @@
               <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
                     <div class="form-group">
-                      <label for="text">Facebook <a class="button-download btn btn-primary btn-sm btn-external-link" href="http://www.facebook.com"><i class="fa fa-external-link"></i> </a></label>
+                      <label for="text">Facebook <a class="button-download btn btn-primary btn-sm btn-external-link" href="http://www.facebook.com" target="_blank" alt="Go to Facebook"><i class="fa fa-external-link"></i> </a></label>
                       <input type="text" id="facebook" class="form-control" value="{{profile.facebook}}" placeholder="https://www.facebook.com/YOURTWITTERUSERNAME">
                   </div>
                 </div>
