--- a/client/templates/guests/home.html
+++ b/client/templates/guests/home.html
@@ -13,11 +13,11 @@
 												{{/unless}}
 												<span>FOLLOW US:</span>
                         <!-- Facebook Share Button -->
-                        <a class="follow-facebook" href="https://www.facebook.com/openstrategynetwork/"><i class="fa some-header fa-facebook-official"></i></a>
+                        <a class="follow-facebook" href="https://www.facebook.com/openstrategynetwork/" target="_blank" alt="OSN on Facebook"><i class="fa some-header fa-facebook-official"></i></a>
                         <!-- Twitter Share Button -->
-                        <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet"><i class="fa some-header fa-twitter"></i></a>
+                        <a class="follow-twitter" href="https://twitter.com/OpenStrategyNet" target="_blank" alt="OSN on Twitter"><i class="fa some-header fa-twitter"></i></a>
                         <!-- RSS Share Button -->
-                        <a class="follow-rss" href="http://feeds.feedburner.com/OpenStrategyNetworksFeed"><i class="fa some-header fa-rss"></i></a>
+                        <a class="follow-rss" href="http://feeds.feedburner.com/OpenStrategyNetworksFeed" target="_blank" alt="OSN RSS Feed"><i class="fa some-header fa-rss"></i></a>
                     </div>
                 </div>
             </div>
