--- a/client/templates/header_footer/_footer.html
+++ b/client/templates/header_footer/_footer.html
@@ -8,9 +8,9 @@
                     <hr class="footer-hr">
                     </div>
                     <div class="footer-hosts">
-                        <a href="http://www.business.uzh.ch/en/professorships/om.html"><img class="hosts-thumbnail" src="{{rootUrl}}img/logo_uni_zuerich.png" alt="University of Zurich"></a>
-                        <a href="http://www.sbs.ox.ac.uk/community/people/richard-whittington"><img class="hosts-thumbnail-innsbruck" src="{{rootUrl}}img/logo_uni_innsbruck.png" alt="University of Innsbruck"></a>
-                        <a href="https://www.uibk.ac.at/iol/organisation/team/leonhard-dobusch/leonhard_dobusch.html.de"><img class="hosts-thumbnail" src="{{rootUrl}}img/logo_uni_oxford.png"></a>
+                        <a href="http://www.business.uzh.ch/en/professorships/om.html" target="_blank" alt="University of Zurich"><img class="hosts-thumbnail" src="{{rootUrl}}img/logo_uni_zuerich.png"></a>
+                        <a href="https://www.uibk.ac.at/iol/organisation/team/leonhard-dobusch/leonhard_dobusch.html.de" target="_blank" alt="University of Innsbruck"><img class="hosts-thumbnail-innsbruck" src="{{rootUrl}}img/logo_uni_innsbruck.png"></a>
+                        <a href="http://www.sbs.ox.ac.uk/community/people/richard-whittington" target="_blank" alt="University of Oxford"><img class="hosts-thumbnail" src="{{rootUrl}}img/logo_uni_oxford.png"></a>
                     </div>
                 </div>
                 <div class="col-sm-4 col-xs-12 text-center">
@@ -38,7 +38,7 @@
             <div class="row text-center">
                 <div class="col-md-6 col-md-offset-6 text-right col-sm-12">
                     <ul class="list-inline quicklinks copyright">
-                        <li><span class="copyright">&copy; Open Strategy Network 2016 <span class="separator">·</span> Made with <i class="fa fa-heart"></i> by <a class="footer-link" href="#">webgstlt</a></span> </li>
+                        <li><span class="copyright">&copy; Open Strategy Network 2016 <span class="separator">·</span> Made with <i class="fa fa-heart"></i> by <a class="footer-link" href="#" target="_blank" alt="Go to Webgstlt">webgstlt</a></span> </li>
                     </ul>
                 </div>
             </div>
