Added target _blank to member profile icons

--- a/client/templates/members/membersMembers.html
+++ b/client/templates/members/membersMembers.html
@@ -80,23 +80,23 @@
                         <div class="social top networks-5 ">
                             <!-- Website Share Button -->
                             {{#if profile.website}}
-                            <a class="follow-website" href="{{profile.website}}"><i class="fa some-members fa-globe"></i></a>
+                            <a class="follow-website" href="{{profile.website}}" target="_blank" alt="Go to website"><i class="fa some-members fa-globe"></i></a>
 														{{/if}}
                             <!-- Blog Share Button -->
                             {{#if profile.blog}}
-                            <a class="follow-blog" href="{{profile.blog}}"><i class="fa some-members fa-book"></i></a>
+                            <a class="follow-blog" href="{{profile.blog}}" target="_blank" alt="Go to Blog"><i class="fa some-members fa-book"></i></a>
 														{{/if}}
                             <!-- LinkedIn-->
                             {{#if profile.linkedin}}
-                            <a class="fbtn follow-linkedin" href="{{profile.linkedin}}"><i class="fa some-members fa-linkedin"></i></a>
+                            <a class="fbtn follow-linkedin" href="{{profile.linkedin}}" target="_blank" alt="Go to LinkedIn"><i class="fa some-members fa-linkedin"></i></a>
 														{{/if}}
                             <!-- Twitter Share Button -->
                             {{#if profile.twitter}}
-                            <a class="follow-twitter" href="{{profile.twitter}}"><i class="fa some-members fa-twitter"></i></a>
+                            <a class="follow-twitter" href="{{profile.twitter}}" target="_blank" alt="Go to Twitter"><i class="fa some-members fa-twitter"></i></a>
 														{{/if}}
                             <!-- Facebook Share Button -->
                             {{#if profile.facebook}}
-                            <a class="follow-facebook" href="{{profile.facebook}}"><i class="fa some-members fa-facebook-official"></i></a>
+                            <a class="follow-facebook" href="{{profile.facebook}}" target="_blank" alt="Go to Facebook"><i class="fa some-members fa-facebook-official"></i></a>
 														{{/if}}
                         </div>
                     </div>
