--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1213,6 +1213,22 @@ header .header-content .header-content-inner p {
         height: 75px;
 }
 
+.news-thumbnail-article {
+		border: none;
+		margin-right: 10px;
+		margin-bottom: 5px;
+		margin-top: 5px;
+		padding: 0 0 15px 0;
+		float:left;
+		// height: 75px;
+		// width: 90px;
+        object-fit: cover;
+        object-position: top;
+        width: 100%;
+        height: 300px;
+}
+
+
 .contact-thumbnail {
 		margin-top: 0px;
 		margin-bottom: 20px;
