News&Events and Article Page image: Polish object fit and position

--- a/client/templates/guests/allNewsEvents.html
+++ b/client/templates/guests/allNewsEvents.html
@@ -78,7 +78,8 @@ related news are warmly welcome. In order to add news to this section, please se
         </div>
         {{/if}}
         {{#if imageExists}}
-        <h4>{{title}}<img alt="news thumbnail" class="news-thumbnail" src="{{ coverImage.url }}" /></h4>
+        <h4>{{title}}</h4>
+        <img alt="news thumbnail" class="news-thumbnail" src="{{ coverImage.url }}" />
         {{else}}
         <h4>{{title}}</h4>
         {{/if}}
