--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1201,29 +1201,29 @@ header .header-content .header-content-inner p {
 .news-thumbnail {
 		border: none;
 		margin-right: 10px;
-		margin-bottom: 5px;
-		margin-top: 5px;
-		padding: 0 0 0 0;
-		float:left;
-		// height: 75px;
-		// width: 90px;
-        object-fit: cover;
-        object-position: top;
-        width: 90px;
-        height: 75px;
-}
-
-.news-thumbnail-article {
-		border: none;
-		margin-right: 10px;
-		margin-bottom: 5px;
-		margin-top: 5px;
+		margin-bottom: 0;
+		margin-top: 0;
 		padding: 0 0 15px 0;
 		float:left;
 		// height: 75px;
 		// width: 90px;
         object-fit: cover;
-        object-position: top;
+        object-position: center;
+        width: 100%;
+        height: 130px;
+}
+
+.news-thumbnail-article {
+		border: none;
+		margin-right: 10px;
+		margin-bottom: 0;
+		margin-top: 0;
+		padding: 0 0 20px 0;
+		float:left;
+		// height: 75px;
+		// width: 90px;
+        object-fit: cover;
+        object-position: center;
         width: 100%;
         height: 300px;
 }
