1st attempt bugfix joinus Form (works but not for iOS)

--- a/client/templates/styles/styles.less
+++ b/client/templates/styles/styles.less
@@ -1858,6 +1858,14 @@ section.layer-login {
     padding: 0 0 0 0;
 }
 
+form#at-pwd-form div {
+    -webkit-transform: translateZ( 0 );
+}
+
+.at-oauth div {
+    -webkit-transform: translateZ( 0 );
+}
+
 .at-form {
     margin: 0 0 0 0;
     padding: 0 0 0 0;
